nginx_server_module/ sg.tf
# Security group
resource "aws_security_group" "nginx-server_sg" {
  name        = "${var.name_tag}_sg"
  description = "allow ssh on 22 & http on port 80"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name        = "${var.name_tag}-sg"
    Environment = var.Environment_tag
    Owner       = var.Owner_tag
    Team        = var.Team_tag
    Project     = var.Project_tag
  }
}
